# Penlight

./: .busted  .gitignore  .luacheckrc  .luacov  .travis.yml  CHANGELOG.md  CHANGES.md  CHANGES.txt  CMakeLists.txt  CONTRIBUTING.md  LICENCE.txt  LICENSE.md  README.md  README.txt  appveyor.yml  change-0.9.5.md  config.ld  dist.cmake  dist.info  ldoc.ltp  penlight-0.8-1.rockspec  penlight-1.8.0-1.src.rock  penlight-dev-1.rockspec  penlight-scm-1.rockspec  penlight-scm-2.rockspec  penlight-scm-3.rockspec  run.lua  teststrictmod1.lua
cmake/: lua.cmake
doc/: config.ld
docs/: config.ld  doc.css  docgen.lua  function_index.html  function_index.txt  index.html  index.lua  markdown.lua  penlight.md  readme.md
docs_topics/: 01-introduction.md  02-arrays.md  03-strings.md  04-paths.md  05-dates.md  06-data.md  07-functional.md  08-additional.md
examples/: seesubst.lua  sipscan.lua  symbols.lua  test-cmp.lua  test-listcallbacks.lua  test-pretty.lua  test-symbols.lua  testapp.lua  testclone.lua  testconfig.lua  testglobal.lua  testinputfields.lua  testinputfields2.lua  testxml.lua  which.lua
rockspecs/: penlight-1.10.0-1.rockspec  penlight-1.10.0-2.rockspec  penlight-1.11.0-1.rockspec  penlight-1.11.0-2.rockspec  penlight-1.12.0-1.rockspec  penlight-1.12.0-2.rockspec  penlight-1.13.0-1.rockspec  penlight-1.14.0-1.rockspec  penlight-1.14.0-2.rockspec  penlight-1.14.0-3.rockspec  penlight-1.15.0-1.rockspec  penlight-1.6.0-1.rockspec  penlight-1.6.0-2.rockspec  penlight-1.7.0-1.rockspec  penlight-1.7.0-2.rockspec  penlight-1.8.0-1.rockspec  penlight-1.8.0-2.rockspec  (+7 more)
(+235 files in other folders)
